feat: polish portfolio with SEO, responsive mobile layout, and custom J favicon

--- a/index.html
+++ b/index.html
@@ -2,10 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Jash Borad - Full Stack Developer & ROS Lead at GCET Team Robocon. Portfolio showcasing web development and robotics projects." />
+    <meta name="description" content="Jash Borad portfolio showcasing AI/ML, software engineering, and robotics projects with expertise in React, Django, ROS 2, and embedded systems." />
+    <meta name="keywords" content="Jash Borad, portfolio, full stack developer, robotics engineer, AI ML, React, Django, ROS 2, ESP32" />
+    <meta name="author" content="Jash Borad" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#0b1220" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Jash Borad | Full Stack Developer & Robotics Engineer" />
+    <meta property="og:description" content="Explore AI/ML, software, and robotics projects by Jash Borad." />
+    <meta property="og:image" content="/images/Profile.png" />
+    <meta property="og:site_name" content="Jash Borad Portfolio" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Jash Borad | Full Stack Developer & Robotics Engineer" />
+    <meta name="twitter:description" content="Explore AI/ML, software, and robotics projects by Jash Borad." />
+    <meta name="twitter:image" content="/images/Profile.png" />
     <title>Jash Borad | Full Stack Developer & Robotics Engineer</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Jash Borad",
+        "jobTitle": "Full Stack Developer & Robotics Engineer",
+        "url": "https://github.com/Boradjash29/borad-jash-portfolio",
+        "sameAs": [
+          "https://github.com/Boradjash29",
+          "https://linkedin.com/in/borad-jash-h2901"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
