--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <meta name="keywords" content="Jash Borad, portfolio, full stack developer, robotics engineer, AI ML, React, Django, ROS 2, ESP32" />
     <meta name="author" content="Jash Borad" />
     <meta name="robots" content="index, follow" />
-    <meta name="theme-color" content="#0b1220" />
+    <meta name="theme-color" content="#050505" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Jash Borad | Full Stack Developer & Robotics Engineer" />
     <meta property="og:description" content="Explore AI/ML, software, and robotics projects by Jash Borad." />
